force-app/main/default/objects/CustomerAlert__c/CustomerAlert__c.object-meta.xml
<CustomObject>
    <description>An object to store alerts for customers, including alert description, alert date, alert type, and a link to the related customer record.</description>
    <label>Customer Alert</label>
    <nameField>
        <label>Customer Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>