force-app/main/default/objects/CustomerAlert__c/fields/Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Date__c</fullName>
    <description>The date of the alert.</description>
    <label>Alert Date</label>
    <type>Date</type>
</CustomField>