force-app/main/default/objects/CustomerAlert__c/fields/Alert_Description__c.field-meta.xml
<CustomField>
    <fullName>Alert_Description__c</fullName>
    <description>Description of the alert.</description>
    <label>Alert Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>